<resources>
    <string name="app_name">COVID-19 Risk Tracker</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="main_status_0">You are OK</string>
    <string name="main_status_expl_0">
        We don\'t know about any event which would increase your infection probability above average level.
    </string>

    <string name="main_status_1">Warning</string>
    <string name="main_status_expl_1">
        For a short time frame we identified people in your environment how are infected by the virus or have high probability of being infected.
        It\'s recommended for you to keep distance from others for a week to stop spreading of the virus.
    </string>

    <string name="main_status_2">High risk</string>
    <string name="main_status_expl_2">
        Somebody get infected who we detected in your environment for a longer time period or multiple times.
        It\'s recommended for you to keep distance from others for two weeks to stop spreading of the virus.
    </string>

    <string name="main_status_3">Infected</string>
    <string name="main_status_expl_3">
        You reported infection, report being healthy if you already recovered or the previous report
        was accidental.
    </string>
    <string name="main_status_not_infected_3">I\'m recovered</string>

    <string name="welcome_text_uuid">This is your unique id, which is used to identify you in our database. Keep it safe. There is no way to restore it, so keep it safe if you may want to recover your account later.</string>
    <string name="welcome_button_recover">Recover old ID</string>
    <string name="text_password_label">Enter your new password</string>
    <string name="text_password_explanation">Explain why password is needed, and that it can no be recovered...</string>
    <string name="welcome_button_accept">Accept and Start</string>
    <string name="welcome_text_reenter_pswd">Reenter the password</string>
    <string name="welcome_title">COVID19 Safety Tracker</string>
    <string name="welcome_subtitle">create an account to fight the virus</string>

    <string name="login_title">COVID19 Safety Tracker</string>
    <string name="login_subtitle">log in to your account</string>
    <string name="login_login">Log in</string>
    <string name="login_password_label">Enter your password</string>

    <string name="mi_logout">Log out</string>
    <string name="mi_login">Log in</string>
    <string name="mi_delete_all">Delete all data</string>
    <string name="mi_report">Report infection</string>

    <string name="report_title">COVID19 Safety Tracker</string>
    <string name="report_subtitle">send report</string>
    <string name="report_explanation">
        Send report if you are sure or that there is a very high probability that you are infected.
        Do it with care because your connections might be alerted and asked for self quarantine to
        prevent further spread of the infection.
    </string>
    <string name="report_btn_infected_1">Report infection proven by test</string>
    <string name="report_btn_infected_2">Report infection based on self diagnose</string>
    <string name="report_btn_cancel">Cancel</string>

    <string name="welcome_explanation_html">
        &lt;h1&gt;What is this app?&lt;/h1&gt;
        &lt;p&gt;
        COVID-19 Safety Tracker is a free contact tracing application to record your contacts
        anonimously, and in case of infection you can notify them without sharing your identity.
        &lt;/p&gt;
        &lt;br&gt;&lt;/br&gt;

        &lt;h1&gt;How can contact tracing help?&lt;/h1&gt;
        &lt;p&gt;
        It helps to slow down the spread of the virus by notifying the potentially infected persons
        about the risk so they can pay special attention not to infect others even if they are
        symptomless.
        &lt;/p&gt;
        &lt;br&gt;&lt;/br&gt;

        &lt;h1&gt;How accurate it is?&lt;/h1&gt;
        &lt;p&gt;
        The application has a few limitations so it\'s not 100% sure that you\'ll be notified if you
        met an infected person, and it\'s not sure that you are infected if you get high risk notifications.
        One limitation is that not everybody is using this app, and you will be notified only about infections
        reported through this app.
        Other limitation is based on the Bluetooth technology used by the application for contact tracing.
        Bluetooth is able to measure approximate distance between phones and determines the transmission
        probability only from the length and frequency of the contacts, no other factors can be taken
        into account.
        &lt;/p&gt;
        &lt;br&gt;&lt;/br&gt;

        &lt;h1&gt;Privacy policy&lt;/h1&gt;
        &lt;p&gt;
        The application handles health records so protecting your privacy is important for us.
        This was an important design objective for the software. It identifies you only with a
        random number which is changed frequently so it\'s really hard to track anyones location
        over a longer time period. This identifier is recorded by nearby devices. If the owner of
        a contacted device reports infection over the app, the identifiers recorded by his phone
        in the previous two weeks will be shared with the app users, this way if one of your
        identifier is on this list, you will be notified.

        &lt;/p&gt;
        &lt;br&gt;&lt;/br&gt;
        &lt;p&gt;
        Information is stored only on your phone and the random IDs of your contacts in the last two weeks
        are shared through Firebase Cloud Messaging (FCM) with other app users in case you submit infection.
        FCM might store these information for the duration needed for transmitting the messages.&lt;/p&gt;
        &lt;br&gt;&lt;/br&gt;

        &lt;h1&gt;Terms&lt;/h1&gt;
        &lt;p&gt;
        The application is free to use. By using the application you accept that a random identifier
        is transmitted over Bluetooth which can be detected by other devices, to safeguard your
        privacy this random identifier is regenerated in about every 15 minutes.
        You also accept that you user the software as it is. And there is no warranty regarding any
        possible damage caused by the software in any direct or indirect way.

        &lt;/p&gt;
        &lt;br&gt;&lt;/br&gt;
    </string>
    <string name="main_title">COVID19 Safety Tracker</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_notification_two_pswd_dif">The two password is different, please enter the same password twice.</string>
    <string name="welcome_error">Error occured, please try it again.</string>
    <string name="main_confirm_dialog_title">Delete your account forever</string>
    <string name="main_confirm_dialog_text">Do you really want to delete your account? Your data will be deleted forever and can not be recovered.</string>
    <string name="login_error">Failed to login. Try again.</string>
    <string name="login_no_account_found">No account key found, create a new account first.</string>

    <string name="report_s_description">
        When you are pretty sure that you have COVID-19 disease, but there is no chance to be tested,
        you can report it here. Please be aware that your report might triggers warning for others you met
        in the last two weeks. The alert is anonymous, your identity will be kept private, not even sent to
        any servers.
    </string>
    <string name="report_s_symptoms">Your symptoms</string>
    <string name="report_s_symptom1">Fever</string>
    <string name="report_s_symptom2">Dry cough</string>
    <string name="report_s_symptom3">Fatigue</string>
    <string name="report_s_symptom4">Sputum production</string>
    <string name="report_s_symptom5">Loss of smell</string>
    <string name="report_s_symptom6">Shortness of breath</string>
    <string name="report_s_symptom7">Muscle or joint pain</string>
    <string name="report_s_symptom8">Sore throat</string>
    <string name="report_s_submit">I\'m sure I\'m infected, submit</string>
    <string name="report_s_title">COVID 19 Safety Tracker</string>
    <string name="report_s_subtitle">Self diagnose</string>

    <string name="report_t_title">COVID 19 Safety Tracker</string>
    <string name="report_t_subtitle">Report positive test</string>
    <string name="report_t_description">
        Your COVID-19 test was positive please report it. Do not report if you are already recovered
        and your are symptomless already for 2 weeks or longer. If you send report your contacts in
        the last two weeks will receive an anonymous alert. Your identity will be kept private, not
        even sent to any servers.
    </string>
    <string name="report_t_submit">I\'m sure I\'m infected, submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="report_s_reported">Infection reported.</string>
    <string name="report_s_submit_failed">Something failed, pleas try again later.</string>
    <string name="main_status_failed">Failed to load status.</string>
    <string name="recovery_reported">Recovery reported.</string>
    <string name="noti_contact_tracing_on">Contact tracing on</string>

    <string name="default_notification_channel_id">COVID-19_notification_channel</string>
    <string name="default_notification_channel_name">COVID-19 Notifications</string>
    <string name="default_notification_channel_description">Notifications from the COVID-19 contact tracing app.</string>
    <string name="default_notification_title">COVID-19 tracing alert</string>

    <string name="fcm_topic_sub_success">Subscribed to COVID-19 alerts.</string>
    <string name="fcm_topic_sub_failed">Subscription to COVID-19 alerts failed, we will try again later.</string>
    <string name="fcm_api_key">AAAAGS7ITts:APA91bG-_YhDlo5pY-FiBS3U38S_QdLqofaJ5QrlfSkVy6kYOMU1Po-pg-iphYmYpx7o0M6iftQb1IatrzV-hotoV_mruI6mEsu7sVZCzoUUoIOL-Wxvye0Pjo4GltyVJlEKUiJa2AKP</string>
</resources>
